Fixed overflow inside css class .cardContainer

--- a/space-tourism/src/pages/Technology/Components/TechCard/TechCard.module.scss
+++ b/space-tourism/src/pages/Technology/Components/TechCard/TechCard.module.scss
@@ -1,7 +1,3 @@
-.cardContainer {
-
-}
-
 .rankAndName {
     font-family: $heading-big-simple;
     text-transform: uppercase;
@@ -181,6 +177,7 @@
         gap: 2rem;
         flex: 1;
         align-items: center;
+        overflow: hidden;
     }
 
     .techInfo {
